--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.0.1",
+    "react-svg-radar-chart": "^1.2.0",
     "yup": "0.27.0"
   },
   "devDependencies": {
